pkg/component/networking/istio/test_charts/ingress_vpn_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: reversed-vpn
  namespace: test-ingress
spec:
  selector:
    app: istio-ingressgateway
    foo: bar
  servers:
  - hosts:
    # This service FQDN does not exist, the gateway just needs to be present so that istio opens the port
    - non-existing-blackhole.garden.svc.cluster.local
    port:
      name: tls-tunnel
      number: 8132
      protocol: HTTP
